mule-user-guide/v/3.4/set-payload-transformer-reference.adoc
= Set Payload Transformer Reference

This transformer sets the payload to whatever you define. The payload can be a literal string or a link:https://docs.mulesoft.com/mule-user-guide/v/3.5/mule-expression-language-mel[Mule Expression].

== Configuration

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....
image:Studio_set-payload.png[Studio_set-payload] 

[%header%autowidth.spread]
|===
|Field |Value |Description |XML
|*Display Name* |Set Payload |Customize to display a unique name for the transformer in your application. a|
[source, code, linenums]
----
doc:name="Set Payload"
----
|*Value* |String or Mule Expression |Enter a literal string or a Mule expression that defines how Mule should set the payload. a|
[source, code, linenums]
----
value="#['Hello, ' + message.payload]"
----
|===
....
[tab,title="XML Editor or Standalone"]
....
[source, code, linenums]
----
# Example setting a payload to a literal string.
 
<set-payload value="MyNewPayload" doc:name="Set Payload"/>
 
# Example setting a payload using a Mule expression. This takes the current payload and transformes it by adding the string "Hello, " in front of it. Thus, if your payload was "Charlie", this set-payload transformer changes it to "Hello, Charlie".
 
<set-payload value="#['Hello, ' + message.payload]" doc:name="Set Payload"/>
----

[%header%autowidth.spread]
|===
|Element |Description
|*set-payload* |Set a payload on your message (as shown in examples above).
|===

[%header%autowidth.spread]
|===
|Element Attribute |Description
|*value* |The literal string or Mule expression that defines how Mule should set the payload.
|*doc:name* a|Customize to display a unique name for the transformer in your application.

Note: Attribute not required in Mule Standalone configuration.
|===
....
------

== Example

In this example, the Set Payload transformer sets the payload to a "Hello, World" message that includes today's date (retrieved using a Mule expression.)

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....
image:hello-flow.png[hello-flow]

image:Studio_setpayload_example.png[Studio_setpayload_example]
....
[tab,title="XML Editor or Standalone"]
....

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
 
<mule xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.4.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
 
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
 
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd">
 
    <flow name="HelloFlow1" doc:name="HelloFlow1">
 
        <http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="8081" doc:name="HTTP"/>
 
        <set-payload value="#['Hello, World!' + ' Today is ' + server.dateTime.format('dd/MM/yy')]" doc:name="Set Payload"/>
 
    </flow>
 
</mule>
----
....
------

== See Also

* See this transformer in action in the link:https://docs.mulesoft.com/mule-user-guide/v/3.5/hello-world-example[Hello World Example].
* Read more about link:https://docs.mulesoft.com/mule-user-guide/v/3.5/transformers[other transformers] available in Mule.
